--- a/src/app/faq/faq.page.html
+++ b/src/app/faq/faq.page.html
@@ -4,3 +4,338 @@
       <img src="./assets/back_button.png"/>
     </ion-button>
   </ion-row>
+
+  <ion-content  padding>
+    <!-- Insert row to bring page content below the header -->
+    <ion-row id="row1"></ion-row>
+  
+    <!-- Whats new Section: -->
+    <!-- Includes slides of news information -->
+  
+    <!--
+    <ion-row>
+      <ion-col>
+        <ion-title>
+          WHAT'S NEW
+        </ion-title>
+      </ion-col>
+    </ion-row>
+  -->
+  
+    <ion-slides shape = "square" id="squareSlides" [options]="{slidesPerView: 1, zoom: true, grabCursor: true}" pager>
+      <ion-slide id = "built_in_America">
+        <ion-col>
+          <ion-card>
+            <img src="./assets/builtInAmerica.png" />
+          </ion-card>
+        </ion-col>
+      </ion-slide>
+  
+      <ion-slide id = "slide_Version2">
+        <ion-col>
+          <ion-card>
+            <img src="./assets/immigrationStories.png" />
+          </ion-card>
+        </ion-col>
+      </ion-slide>
+    </ion-slides>
+  
+    <!-- About Us Section: -->
+    <!-- Includes a slide section for "What We Do" and "Our Founders" -->
+    <ion-row>
+      <ion-col>
+        <ion-text id = "about_us_title">
+          ABOUT US
+        </ion-text>
+      </ion-col>
+      <ion-col>
+        <img id= "founders_decor" src="./assets/yellowLine.png" />
+      </ion-col>
+    </ion-row>
+  
+    <ion-card id = "alignCenter">
+      <ion-card-header>
+        <ion-card-title>WHAT WE DO</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        International students are struggling with 
+        all the recent uncertainty around policy 
+        changes and the threat of deportation, 
+        many don't know where to turn.
+      </ion-card-content>
+      <ion-card-content>
+        We are a non-profit organization that provides 
+        a list of companies that hire foriegn nationals. 
+        We offer qualifying students need-based financial 
+        assistance, an online networking community in 
+        addition to volunteering opportunities to gain 
+        work experience.
+      </ion-card-content>
+    </ion-card>
+  
+    <ion-row id="meetRow">
+      <ion-card-title id= "meet_text">MEET</ion-card-title>
+    </ion-row>
+    <img id= "founders_decor" src="./assets/yellowLine.png" />
+    <ion-row id="foundersRow">
+      <ion-card-title id= "founders_text">The Founders</ion-card-title>
+    </ion-row>
+  
+    <ion-card id="height350">
+      <img id="david_img" src="./assets/David.png"/>
+      <ion-text id="david_text">
+        David Vargas
+      </ion-text>
+      <img id="sophie_img" src="./assets/Sophie.png"/>
+      <ion-text id="sopie_text">
+        Sophie Alcorn
+      </ion-text>
+    </ion-card>
+  
+  <!--
+    <ion-slides [options]="{ slidesPerView: 1, zoom: true, grabCursor: true }" pager>
+      <ion-slide>
+        <ion-col>
+          <ion-card>
+            <ion-card-header>
+              <ion-card-title>WHAT WE DO</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              International students are struggling with 
+              all the recent uncertainty around policy 
+              changes and the threat of deportation, 
+              many don't know where to turn.
+            </ion-card-content>
+            <ion-card-content>
+              We are a non-profit organization that provides 
+              a list of companies that hire foriegn nationals. 
+              We offer qualifying students need-based financial 
+              assistance, an online networking community in 
+              addition to volunteering opportunities to gain 
+              work experience.
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+      </ion-slide>
+  
+      <ion-slide id = "slide_Version2">
+        <ion-col>
+          <ion-card style="height: 400px">
+            <ion-card-header>
+              <ion-row style="padding: 5px; height: 5px; width: 100%; text-align: right;">
+                <ion-card-title id= "meet_text">MEET</ion-card-title>
+              </ion-row>
+              <img id= "founders_decor" src="./assets/yellowLine.png" />
+              <ion-row style="padding: 20px; width: 100%; text-align: right;">
+                <ion-card-title id= "founders_text">The Founders</ion-card-title>
+              </ion-row>
+            </ion-card-header>
+            <ion-row>
+              <ion-col>
+                <ion-avatar> 
+                  <img src="./assets/Sophie.png"/>
+                </ion-avatar>
+              </ion-col>
+              <ion-col>
+                <ion-avatar> 
+                  <img src="./assets/David.png"/>
+                </ion-avatar>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col>
+                <ion-card-content>
+                  Sophie Alcorn
+                </ion-card-content>
+              </ion-col>
+              <ion-col>
+                <ion-card-content>
+                  David Vargas
+                </ion-card-content>
+              </ion-col>
+            </ion-row>
+          </ion-card>
+        </ion-col>
+      </ion-slide>
+    </ion-slides>
+  -->
+    <!-- Famous Immigrants Section: -->
+    <!-- Information transferred from the website @ cfgi.world -->
+    <ion-row id="height75">
+      <ion-col>
+        <img id = "wavy_lines" src="./assets/wavyLines.png" />
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <div class="flex-container">
+          <img id="famousImmigrantPicture" src="./assets/sunrise_shape.png" />
+        </div>
+      </ion-col>
+    </ion-row>
+    <ion-row id="height20">
+      <ion-col>
+        <ion-text id = "famous_immigrants_title">
+          Famous Immigrants
+        </ion-text>
+      </ion-col>
+    </ion-row>
+    <ion-row id="height50">
+      <ion-col>
+        <ion-text id = "in_history2_title">
+          IN U.S. HISTORY
+        </ion-text>
+        <ion-text id = "in_history_title">
+          IN U.S. HISTORY
+        </ion-text>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <div class="flex-container">
+          <ion-text id = "famous_immigrants_description">
+            In the past, we have always drawn strength from the brightest and most dedicated people coming here and reaching for the American dream. Many of the world's most productive scientists and engineers are foreign-born, so the United States is always at the forefront of global innovation.  Here are some you may already know:
+          </ion-text>
+        </div>
+      </ion-col>
+    </ion-row>
+  
+    <ion-row id="immagrantSlideDeck">
+      <ion-slides id="height90vh" [options]="{centeredSlides: true, slidesPerView: 1.5, zoom: true, grabCursor: true }" pager>
+        <ion-slide id="border5">
+          <ion-col>
+            <ion-card id="width100">
+              <img src="./assets/albertEinstein.png" />
+              <ion-card-header>
+                <ion-card-title id = "immigrant_title">ALBERT EINSTEIN</ion-card-title>
+                <ion-card-subtitle id = "immigrant_subtitle">GERMANY</ion-card-subtitle>
+              </ion-card-header>
+              <ion-card-content id = "immigrant_content">
+                One of the most recognized and well-known scientists of the century.
+                His theories solved centuries-old-problems in physics and rocked even non-physicists' view of the world. E= mc2
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+        </ion-slide>
+    
+        <ion-slide id="border5">
+          <ion-col>
+            <ion-card id="width100">
+              <img src="./assets/chien-shiungWu.png"/>
+              <ion-card-header>
+                <ion-card-title id = "immigrant_title">CHIEN-SHIUNG WU</ion-card-title>
+                <ion-card-subtitle id = "immigrant_subtitle">CHINA</ion-card-subtitle>
+              </ion-card-header>
+              <ion-card-content id = "immigrant_content">
+                Chinese-American nuclear physicist Chien-Shiung Wu, also known as "the First Lady of Physics,” contributed to the Manhattan Project and made history with an experiment that disproved the hypothetical law of conservation of parity.
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+        </ion-slide>
+    
+        <ion-slide id="border5">
+          <ion-col>
+            <ion-card id="width100">
+              <img src="./assets/nikolaTesla.png" />
+              <ion-card-header>
+                <ion-card-title id = "immigrant_title">NIKOLA TESLA</ion-card-title>
+                <ion-card-subtitle id = "immigrant_subtitle">SERBIA</ion-card-subtitle>
+              </ion-card-header>
+              <ion-card-content id = "immigrant_content">
+                Futurist who illuminated the earth electrically bright due to his immense contributions in designing the very back-bone of every modern electric supply of today – the alternating current.
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+        </ion-slide>
+    
+        <ion-slide id="border5">
+          <ion-col>
+            <ion-card id="width100">
+              <img src="./assets/ceciliaPayne.png" />
+              <ion-card-header>
+                <ion-card-title id = "immigrant_title">CECILIA PAYNE</ion-card-title>
+                <ion-card-subtitle id = "immigrant_subtitle">ENGLAND</ion-card-subtitle>
+              </ion-card-header>
+              <ion-card-content id = "immigrant_content">
+                Cecilia Payne discovered that stars are made largely of the two lightest chemical elements – hydrogen and helium. She was the most eminent female astronomer of her time, the first to be appointed full professor at Harvard University, and the first to chair a department.
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+        </ion-slide>
+    
+        <ion-slide id="border5">
+          <ion-col>
+            <ion-card id="width100">
+              <img src="./assets/bobMarley.png" />
+              <ion-card-header>
+                <ion-card-title id = "immigrant_title">BOB MARLEY</ion-card-title>
+                <ion-card-subtitle id = "immigrant_subtitle">JAMAICA</ion-card-subtitle>
+              </ion-card-header>
+              <ion-card-content id = "immigrant_content">
+                Considered one of the pioneers of reggae music. Bob was a freedom fighter he used his Pen instead of gun. He fought for freedom, peace, and equal rights. Marley received The United Nations Peace Medal. Marley’s “One Love” was proclaimed as Song of the Millennium.
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+        </ion-slide>
+    
+        <ion-slide id="border5">
+          <ion-col>
+            <ion-card id="width100">
+              <img src="./assets/gertyCori.png" />
+              <ion-card-header>
+                <ion-card-title id = "immigrant_title">GERTY CORI</ion-card-title>
+                <ion-card-subtitle id = "immigrant_subtitle">CZECH</ion-card-subtitle>
+              </ion-card-header>
+              <ion-card-content id = "immigrant_content">
+                Carbohydrate research not only led to the development of treatments for diabetes, it also made them winners of the 1947 Nobel Prize in physiology or medicine, and Gerty the first American woman Nobel laureate in science.
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+        </ion-slide>
+    
+        <ion-slide id="border5">
+          <ion-col>
+            <ion-card id="width100">
+              <img src="./assets/josephPulitzer.png" />
+              <ion-card-header>
+                <ion-card-title id = "immigrant_title">JOSEPH PULITZER</ion-card-title>
+                <ion-card-subtitle id = "immigrant_subtitle">HUNGARY</ion-card-subtitle>
+              </ion-card-header>
+              <ion-card-content id = "immigrant_content">
+                Best known for the Pulitzer Prizes, which were established in 1917. He was American newspaper editor and publisher who helped to establish the pattern of the modern newspaper. In his time he was one of the most powerful journalists in the United States.
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+        </ion-slide>
+    
+        <ion-slide id="border5">
+          <ion-col>
+            <ion-card id="width100">
+              <img src="./assets/mariaMayner.png" />
+              <ion-card-header>
+                <ion-card-title id = "immigrant_title">MARIA MAYNER</ion-card-title>
+                <ion-card-subtitle id = "immigrant_subtitle">GERMANY</ion-card-subtitle>
+              </ion-card-header>
+              <ion-card-content id = "immigrant_content">
+                German-born American theoretical physicist, and Nobel laureate in Physics for proposing the nuclear shell model of the atomic nucleus. She was the second woman to win a Nobel Prize in physics, the first being Marie Curie.
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+        </ion-slide>
+        
+        <ion-slide id="border5">
+          <ion-col>
+            <ion-card id="width100">
+              <img src="./assets/hedyLamarr.png" />
+              <ion-card-header>
+                <ion-card-title id = "immigrant_title">HEDY LAMARR</ion-card-title>
+                <ion-card-subtitle id = "immigrant_subtitle">AUSTRIA</ion-card-subtitle>
+              </ion-card-header>
+              <ion-card-content id = "immigrant_content">
+                Frequency hopping a way of jumping around on radio frequencies in order to avoid a third party jamming your signal. Avid inventor and the person behind advances advances in communication technology that led to today’s Wi-Fi, GPS, and Bluetooth.
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+        </ion-slide>
+      </ion-slides>
+    </ion-row>
