--- a/src/app/faq/faq.page.scss
+++ b/src/app/faq/faq.page.scss
@@ -3,3 +3,379 @@
     top:2%;
     color: black;
 }
+
+
+#container {
+    text-align: center;
+  
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  
+  #container strong {
+    font-size: 20px;
+    line-height: 26px;
+  }
+  .displayed {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  #container p {
+    font-size: 16px;
+    line-height: 22px;
+  
+    color: #ffffff;
+  
+    margin: 0;
+  }
+  
+  #container a {
+    text-decoration: none;
+  }
+  
+  
+  
+  ion-slides {
+    --bullet-background: #A9A9A9;
+    --bullet-background-active: #F18C7F;
+  }
+  
+  
+  #slide_Version2 {
+    width: 400px; 
+    border: 10px;
+  }
+  
+  #built_in_America{
+    width: 375px; 
+    border: 10px;
+  }
+  
+  #about_us_title{
+    @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap');
+    font-family: 'Oxygen', sans-serif;
+    position: absolute;
+    width: 100%;
+    height: 32px;
+    left: 50%;
+  
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 32px;
+    /* identical to box height, or 178% */
+    letter-spacing: 3px;
+    text-transform: uppercase;
+  
+    color: #F18C7F;
+  }
+  
+  #meet_text{
+    width: 114px;
+    height: 32px;
+    position: relative;
+    float: right;
+    left: 37%;
+    
+  
+    @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap');
+    font-family: 'Oxygen', sans-serif;
+    font-weight: 700;
+    color: #F18C7F;
+    font-size: 18px;
+    letter-spacing: 3px;
+  }
+  
+  #founders_decor{
+    position: relative;
+    right: -1%;
+    top: 15px;
+    float: right;
+  }
+  
+  #founders_text{
+    left: 39%;
+  
+    font-family: Righteous;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 32px;
+    line-height: 40px;
+    text-align: center;
+  
+    /* Gray 1 */
+    color: #333333;
+    }
+  
+  #sophie_img{
+    position: absolute;
+    width: 154px;
+    height: 154px;
+    left: 50%;
+    top: 29%;
+  
+    filter: drop-shadow(0px 40px 40px rgba(0, 0, 0, 0.25));
+    border-radius: 109px;
+  }
+  
+  #david_img{
+    position: absolute;
+    width: 154px;
+    height: 154px;
+    left: 1%;
+    top:8%;
+  
+    filter: drop-shadow(0px 40px 40px rgba(0, 0, 0, 0.25));
+    border-radius: 123px;
+  }
+  
+  #sopie_text{
+    position: absolute;
+    width: 90px;
+    height: 15px;
+    left: 60%;
+    top: 77%;
+  
+    @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap');
+    font-family: 'Oxygen', sans-serif;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 32px;
+    /* or 200% */
+    text-align: center;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+  
+    color: #FF6059;
+  }
+  
+  #david_text{
+    position: absolute;
+    width: 108.71px;
+    height: 29px;
+    left: 10%;
+    top: 55%;
+  
+    @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap');
+    font-family: 'Oxygen', sans-serif;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 32px;
+    /* or 200% */
+    text-align: center;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+  
+    color: #FF564F;
+  }
+  
+  #wavy_lines{
+    position: relative;
+    left: -7%;
+    top: 15px;
+    float: left
+  }
+  
+  #famous_immigrants_title{
+    position: absolute;
+    width: 208px;
+    height: 25px;
+    left: 22%;
+    top: 10%;
+  
+    @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap');
+    font-family: 'Oxygen', sans-serif;
+    font-weight: 700;
+    color: #FF564F;
+    font-size: 14px;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    text-align: center;
+  }
+  
+  #in_history_title{
+    position: absolute;
+    width: 240px;
+    height: 40px;
+    right: 17%;
+    top: 5%;
+    
+    @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+    font-family: 'Righteous', normal;
+    font-weight: normal;
+    color: #FFFFFF;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #333333;
+    font-size: 32px;
+    text-transform: uppercase;
+  }
+  
+  #in_history2_title{
+    position: absolute;
+    width: 288px;
+    height: 34px;
+    top: 15%;
+    right: 11.4%;
+  
+    @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+    font-family: 'Righteous', normal;
+    font-weight: normal;
+    font-size: 32px;
+    line-height: 40px;
+    /* or 125% */
+    text-transform: uppercase;
+  
+    color: #333333;
+  }
+  
+  #famous_immigrants_description{
+    position: absolute;
+    width: 90%;
+    height: 34px;
+    top: 80%;
+  
+    @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap');
+    font-family: 'Oxygen', sans-serif;
+    font-weight: 600;
+    font-style: italic;
+    color: #ffffff;
+    font-size: 12px;
+  }
+  
+  #immigrant_title{
+    @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap');
+    font-family: 'Oxygen', sans-serif;
+    font-weight: 700;
+    color: #FF564F;
+    font-size: 4.6vmin;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+  }
+  
+  #immigrant_subtitle{
+    @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap');
+    font-family: 'Oxygen', sans-serif;
+    font-weight: 500;
+    color: #333333;
+    font-size: 3vmin;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    padding: 8px;
+  }
+  
+  #immigrant_content{
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-style:italic;
+    color: #333333;
+    font-size: 3vmin;
+  }
+  
+  #row1{
+    height: 50px;
+  }
+  
+  #squareSlides {
+    left: -5%; 
+    width:110%;
+  }
+  
+  #alignCenter{
+    text-align: center;
+  }
+  
+  #meetRow{
+    padding: 5px; 
+    height: 5px; 
+    width: 100%; 
+    text-align: right;
+  }
+  
+  #foundersRow{
+    padding: 20px; 
+    width: 100%; 
+    text-align: right;
+  }
+  
+  #height350{
+    height: 350px;
+  }
+  
+  #border5{
+    border: 5px;
+  }
+  
+  #width100{
+    width: 100%;
+    height: 550px;
+  }
+  
+  #immagrantSlideDeck{
+    position: relative; 
+    top: 5%; 
+    height: 75%; 
+    text-align: auto;
+  }
+  
+  #height90vh{
+    height:90vh;
+  }
+  
+  #height75{
+    height: 75px;
+  }
+  
+  #height20{
+    height: 20px;
+  }
+  
+  #height50{
+    height: 50px;
+  }
+  
+  #famousImmigrantPicture{
+    position:absolute; 
+    top:-40%; 
+    width:100%;
+  }
+  
+  ion-content {
+    --ion-background-color: #FFFFFF;
+  }
+  
+  ion-title {
+    @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap');
+    font-family: 'Oxygen', sans-serif;
+    color: #F18C7F;
+    font-size: 1.2rem;
+  }
+  
+  ion-card-title {
+    @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+    font-family: 'Righteous', normal;
+    font-weight: 400;
+    font-size: 32px;
+    color: #333333;
+  }
+  
+  ion-card-content {
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    color: #333333;
+  }
+  
+  ion-row {
+    height: 50px;
+    text-align: center
+  }
+  
+  
+  ion-card {
+    box-shadow: none !important;
+  }
