--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,7 +1,57 @@
+ion-slides {
+  --bullet-background: #A9A9A9;
+  --bullet-background-active: #F18C7F;
+}
+
+ion-content {
+  --ion-background-color: #FFFFFF;
+}
+
+ion-title {
+  @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap');
+  font-family: 'Oxygen', sans-serif;
+  color: #F18C7F;
+  font-size: 1.2rem;
+}
+
+ion-card {
+  box-shadow: none !important;
+}
+
+ion-card-title {
+  @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+  font-family: 'Righteous', normal;
+  font-weight: 400;
+  font-size: 32px;
+  color: #333333;
+}
+
+ion-card-content {
+  @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  color: #333333;
+}
+
+ion-row {
+  width: 100%;
+  height: 20px;
+  text-align: center
+}
+
+ion-item {
+  --padding-start: 0px;
+  --inner-padding-start: 0px;
+  --padding-end: 0px;
+  --inner-padding-end: 0px;
+  --background: none;
+  --border-style: "none";
+}
+
+
 #container {
   text-align: center;
-
-  position: absolute;
   left: 0;
   right: 0;
   top: 50%;
@@ -30,66 +80,82 @@
   text-decoration: none;
 }
 
-
-
-ion-slides {
-  --bullet-background: #A9A9A9;
-  --bullet-background-active: #F18C7F;
+#row1{
+  height: 5%;
 }
 
-
-#slide_Version2 {
-  width: 400px; 
-  border: 10px;
+#squareSlides {
+  width:100hw;
+  padding-bottom: 5%;
 }
 
 #built_in_America{
-  width: 375px; 
-  border: 10px;
+  scale:1.1;
+}
+
+#slide_Version2 {
+  scale:1.1;
 }
 
 #about_us_title{
+
+  width: 100%;
+  left: 50%;
+  float: right;
+
   @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap');
   font-family: 'Oxygen', sans-serif;
-  position: absolute;
-  width: 100%;
-  height: 32px;
-  left: 50%;
-
   font-weight: bold;
-  font-size: 18px;
-  line-height: 32px;
-  /* identical to box height, or 178% */
-  letter-spacing: 3px;
+  font-size: 1.3em;
+  letter-spacing: .3em;
   text-transform: uppercase;
-
   color: #F18C7F;
+  text-align:center;
+}
+
+#about_us_decor{
+  float:right;
+}
+
+#meetRow{
+  padding-top: 5%;
+  width: 100%; 
+  text-align: right;
 }
 
 #meet_text{
-  width: 114px;
-  height: 32px;
+  width: 100%;
+  top: 30%;
+  right: 20%;
   position: relative;
   float: right;
-  left: 37%;
-  
 
   @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap');
   font-family: 'Oxygen', sans-serif;
   font-weight: 700;
   color: #F18C7F;
-  font-size: 18px;
-  letter-spacing: 3px;
+  font-size: 1.5em;
+  letter-spacing: .2em;
+}
+
+#foundersRow{
+  padding: 5%; 
+  width: 100%; 
+  text-align: right;
 }
 
 #founders_decor{
   position: relative;
+  max-height: 7px;
+  width:33%;
   right: -1%;
-  top: 15px;
+  top: 2em;
   float: right;
 }
 
 #founders_text{
+  width: 100%;
+  padding-top: 7%;
   left: 39%;
 
   font-family: Righteous;
@@ -97,46 +163,47 @@ ion-slides {
   font-weight: normal;
   font-size: 32px;
   line-height: 40px;
-  text-align: center;
+  text-align: right;
 
   /* Gray 1 */
   color: #333333;
-  }
+}
+
+#founders_card{
+  top: 10%;
+  width: 100%;
+  height: 60vh;
+}
 
 #sophie_img{
-  position: absolute;
-  width: 154px;
-  height: 154px;
-  left: 50%;
-  top: 29%;
+  scale:1.5;
+  position: relative;
+  width: 100%;
 
-  filter: drop-shadow(0px 40px 40px rgba(0, 0, 0, 0.25));
-  border-radius: 109px;
+  //filter: drop-shadow(0px 40px 40px rgba(0, 0, 0, 0.25));
+  border-radius: 100%;
+  border: .2em solid #FF6059;
 }
 
 #david_img{
-  position: absolute;
-  width: 154px;
-  height: 154px;
-  left: 1%;
-  top:8%;
+  scale:1.5;
+  position: relative;
+  width: 100%;
 
-  filter: drop-shadow(0px 40px 40px rgba(0, 0, 0, 0.25));
-  border-radius: 123px;
+  //filter: drop-shadow(0px 40px 40px rgba(0, 0, 0, 0.25));
+  border-radius: 100%;
+  border: .2em solid #FF6059;
 }
 
 #sopie_text{
-  position: absolute;
-  width: 90px;
-  height: 15px;
-  left: 60%;
-  top: 77%;
+  position:relative;
+  width: 30%;
 
   @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap');
   font-family: 'Oxygen', sans-serif;
   font-weight: bold;
-  font-size: 16px;
-  line-height: 32px;
+  font-size: 1.2em;
+  line-height: 1.5em;
   /* or 200% */
   text-align: center;
   letter-spacing: 3px;
@@ -146,55 +213,46 @@ ion-slides {
 }
 
 #david_text{
-  position: absolute;
-  width: 108.71px;
-  height: 29px;
-  left: 10%;
-  top: 55%;
+  position:relative;
+  width: 40%;
 
   @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap');
   font-family: 'Oxygen', sans-serif;
   font-weight: bold;
-  font-size: 16px;
-  line-height: 32px;
+  font-size: 1.2em;
+  line-height: 1.5em;
   /* or 200% */
   text-align: center;
   letter-spacing: 3px;
   text-transform: uppercase;
 
   color: #FF564F;
+
+  padding-top: 100%;
 }
 
 #wavy_lines{
   position: relative;
-  left: -7%;
-  top: 15px;
-  float: left
+  float: left;
+  left:-3%;
 }
 
 #famous_immigrants_title{
-  position: absolute;
-  width: 208px;
-  height: 25px;
-  left: 22%;
-  top: 10%;
+  width: 50%;
 
   @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap');
   font-family: 'Oxygen', sans-serif;
   font-weight: 700;
   color: #FF564F;
-  font-size: 14px;
+  font-size: 1.2em;
   letter-spacing: 3px;
   text-transform: uppercase;
   text-align: center;
 }
 
 #in_history_title{
-  position: absolute;
-  width: 240px;
-  height: 40px;
-  right: 17%;
-  top: 5%;
+  position:absolute;
+  width:100%;
   
   @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
   font-family: 'Righteous', normal;
@@ -202,33 +260,29 @@ ion-slides {
   color: #FFFFFF;
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: #333333;
-  font-size: 32px;
+  font-size: 2em;
   text-transform: uppercase;
 }
 
 #in_history2_title{
-  position: absolute;
-  width: 288px;
-  height: 34px;
-  top: 15%;
-  right: 11.4%;
+  position:absolute;
+  width:100%;
+  top: 10%;
+  left: 1%;
 
   @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
   font-family: 'Righteous', normal;
   font-weight: normal;
-  font-size: 32px;
+  font-size: 2em;
   line-height: 40px;
-  /* or 125% */
   text-transform: uppercase;
-
   color: #333333;
 }
 
 #famous_immigrants_description{
-  position: absolute;
   width: 90%;
-  height: 34px;
-  top: 80%;
+  padding-top:10%;
+  padding-bottom:10%;
 
   @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap');
   font-family: 'Oxygen', sans-serif;
@@ -268,34 +322,8 @@ ion-slides {
   font-size: 3vmin;
 }
 
-#row1{
-  height: 50px;
-}
-
-#squareSlides {
-  left: -5%; 
-  width:110%;
-}
-
 #alignCenter{
   text-align: center;
-}
-
-#meetRow{
-  padding: 5px; 
-  height: 5px; 
-  width: 100%; 
-  text-align: right;
-}
-
-#foundersRow{
-  padding: 20px; 
-  width: 100%; 
-  text-align: right;
-}
-
-#height350{
-  height: 350px;
 }
 
 #border5{
@@ -308,8 +336,6 @@ ion-slides {
 }
 
 #immagrantSlideDeck{
-  position: relative; 
-  top: 5%; 
   height: 75%; 
   text-align: auto;
 }
@@ -331,44 +357,7 @@ ion-slides {
 }
 
 #famousImmigrantPicture{
-  position:absolute; 
-  top:-40%; 
-  width:100%;
-}
-
-ion-content {
-  --ion-background-color: #FFFFFF;
-}
-
-ion-title {
-  @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap');
-  font-family: 'Oxygen', sans-serif;
-  color: #F18C7F;
-  font-size: 1.2rem;
-}
-
-ion-card-title {
-  @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
-  font-family: 'Righteous', normal;
-  font-weight: 400;
-  font-size: 32px;
-  color: #333333;
-}
-
-ion-card-content {
-  @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 400;
-  font-size: 14px;
-  color: #333333;
-}
-
-ion-row {
-  height: 50px;
-  text-align: center
-}
-
-
-ion-card {
-  box-shadow: none !important;
+  width:100vh;
+  bottom:-40%;
+  scale: 1.2;
 }
